# obs-plugin-countdown

./: .clang-format  .cmake-format.json  .gersemirc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  local-test-script.sh  obs-plugin-countdown.pro
.github/scripts/: .build.zsh  .package.zsh  Build-Windows.ps1  check-format.sh
.github/workflows/: build-project.yaml  main.yml  pr-pull.yaml
build-aux/: .run-format.zsh
data/locale/: da-DK.ini  de-DE.ini  en-GB.ini  en-US.ini  pt-BR.ini
lib/: obs-websocket-api.h
src/: CountdownTimer.ui  countdown-widget.cpp  countdown-widget.hpp  plugin-macros.h.in  plugin-main.c  plugin-main.cpp  plugin-support.c.in
src/classes/: colour-rule.cpp  colour-rule.hpp
src/ui/: AshmanixTimer.ui  AshmanixTimerOld.ui  AshmanixTimerTest.ui  CountdownTimer.ui  SettingsDialog.ui  SingleColourRule.ui  TextColourSettings.ui
src/utils/: general-utils.hpp  obs-utils.cpp  obs-utils.hpp  timer-utils.cpp  timer-utils.hpp  websocket-notifier.cpp  websocket-notifier.hpp
src/widgets/: ashmanix-timer.cpp  ashmanix-timer.hpp  obs-dock-wrapper.hpp  settings-dialog.cpp  settings-dialog.hpp
src/widgets/ashmanix-timer/: hotkey-manager.cpp  hotkey-manager.hpp  timer-engine.cpp  timer-engine.hpp  timer-persistence.cpp  timer-persistence.hpp  timer-ui-manager.cpp  timer-ui-manager.hpp  websocket-notifier.cpp  websocket-notifier.hpp
src/widgets/settings/: colour-change-widget.cpp  colour-change-widget.hpp  single-colour-rule-widget.cpp  single-colour-rule-widget.hpp
